inc_gpu = include_directories('.')

src_gpu = files(
  'intern/gpu_backend.hh',
  'intern/gpu_context_private.hh',
  'intern/gpu_debug_private.hh',
  'intern/gpu_framebuffer_private.hh',
  'intern/gpu_immediate_private.hh',
  'intern/gpu_shader_create_info.cc',
  'intern/gpu_shader_create_info.hh',
  'intern/gpu_shader_create_info_private.hh',
  'intern/gpu_shader_dependency_private.hh',
  'intern/gpu_shader_interface.cc',
  'intern/gpu_shader_interface.hh',
  'intern/gpu_shader_private.hh',
  'intern/gpu_state.cc',
  'intern/gpu_state_private.hh',
  'intern/gpu_texture.cc',
  'intern/gpu_texture_private.hh',
)

hdr_gpu = files(
  'GPU_batch.hh',
  'GPU_capabilities.hh',
  'GPU_common.hh',
  'GPU_common_types.hh',
  'GPU_context.hh',
  'GPU_framebuffer.hh',
  'GPU_index_buffer.hh',
  'GPU_material.hh',
  'GPU_platform.hh',
  'GPU_platform_backend_enum.h',
  'GPU_primitive.hh',
  'GPU_shader.hh',
  'GPU_shader_builtin.hh',
  'GPU_state.hh',
  'GPU_storage_buffer.hh',
  'GPU_texture.hh',
  'GPU_uniform_buffer.hh',
  'GPU_vertex_buffer.hh',
  'GPU_vertex_format.hh',
)

if get_option('WITH_OPENGL_BACKEND')
  src_gpu += files(
    'opengl/gl_backend.cc',
    'opengl/gl_backend.hh',
    'opengl/gl_batch.cc',
    'opengl/gl_batch.hh',
    'opengl/gl_compilation_subprocess.cc',
    'opengl/gl_compilation_subprocess.hh',
    'opengl/gl_compute.cc',
    'opengl/gl_compute.hh',
    'opengl/gl_context.cc',
    'opengl/gl_context.hh',
    'opengl/gl_debug.cc',
    'opengl/gl_debug.hh',
    'opengl/gl_debug_layer.cc',
    'opengl/gl_drawlist.cc',
    'opengl/gl_drawlist.hh',
    'opengl/gl_framebuffer.cc',
    'opengl/gl_framebuffer.hh',
    'opengl/gl_immediate.cc',
    'opengl/gl_immediate.hh',
    'opengl/gl_index_buffer.cc',
    'opengl/gl_index_buffer.hh',
    'opengl/gl_primitive.hh',
    'opengl/gl_query.cc',
    'opengl/gl_query.hh',
    'opengl/gl_shader.cc',
    'opengl/gl_shader.hh',
    'opengl/gl_shader_interface.cc',
    'opengl/gl_shader_interface.hh',
    'opengl/gl_shader_log.cc',
    'opengl/gl_state.cc',
    'opengl/gl_state.hh',
    'opengl/gl_storage_buffer.cc',
    'opengl/gl_storage_buffer.hh',
    'opengl/gl_texture.cc',
    'opengl/gl_texture.hh',
    'opengl/gl_uniform_buffer.cc',
    'opengl/gl_uniform_buffer.hh',
    'opengl/gl_vertex_array.cc',
    'opengl/gl_vertex_array.hh',
    'opengl/gl_vertex_buffer.cc',
    'opengl/gl_vertex_buffer.hh',
  )
endif

lib_gpu = library(
  'acc_gpu',
  src_gpu,
  include_directories: [inc_atomic, inc_mem, inc_dna, inc_bli, inc_bke, inc_gpu],
  dependencies: [bli, bke, dna, mem],
  install: true,
  version: version,
)

bli = declare_dependency(
  include_directories: [inc_gpu],
  link_with: lib_gpu,
)